pkg/plugins/policies/meshtimeout/plugin/testdata/matched_only_spiffe_inbound.listener.golden.yaml
resources:
- name: inbound
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 80
    enableReusePort: true
    filterChains:
    - filters:
      - name: envoy.filters.network.set_filter_state
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.set_filter_state.v3.Config
          onDownstreamTlsHandshake:
          - factoryKey: envoy.string
            formatString:
              textFormatSource:
                inlineString: '%DOWNSTREAM_PEER_URI_SAN%'
            objectKey: kuma.mesh_timeout.match.spiffe_id
            readOnly: true
            skipIfEmpty: true
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            name: self_inbound_dp_80
            requestHeadersToRemove:
            - x-kuma-tags
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: self_inbound_dp_80
              routes:
              - match:
                  filterState:
                  - key: kuma.mesh_timeout.match.spiffe_id
                    stringMatch:
                      exact: spiffe://default/client
                  prefix: /
                route:
                  cluster: self_inbound_dp_80
                  idleTimeout: 3s
                  timeout: 2s
              - match:
                  filterState:
                  - key: kuma.mesh_timeout.match.spiffe_id
                    stringMatch:
                      exact: spiffe://default/client-stream
                  prefix: /
                route:
                  cluster: self_inbound_dp_80
                  idleTimeout: 4s
                  timeout: 0s
              - match:
                  prefix: /
                route:
                  cluster: self_inbound_dp_80
                  timeout: 0s
          statPrefix: self_inbound_dp_80
    name: self_inbound_dp_80
    trafficDirection: INBOUND
